--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -166,6 +166,8 @@
 .cs_dispimg{
     padding: 7px;
     border-radius: 0.9rem !important;
+    /*min-width: 18.28rem;*/
+    min-width: 100%;
 }
 .view.overlay .back {
     position: absolute;
