--- a/webroot/newtheme/custom/css/event.details.css
+++ b/webroot/newtheme/custom/css/event.details.css
@@ -28,8 +28,9 @@
 		margin-left: 10px;
 	}
 	.cname-span{
-		margin-top: 22px;
+		margin-top: 15px;
 		color: #f4f4f4;
+		margin-left: 10px;
 	}
 	@media (max-width: 768px){
 		.mob-container{
@@ -40,8 +41,8 @@
 	}	
 	}
 	img.marg-card {
-	    width: 50px;
-	    height: 50px;
+	    width: 40px;
+	    height: 40px;
 	}
 	.cs_right_details_mob{
 			display: none !important;
