--- a/webroot/newtheme/css/style.css
+++ b/webroot/newtheme/css/style.css
@@ -42,6 +42,7 @@ body{
     padding: 8px 10px !important;
     font-size: 14px;
 }
+
 .search-box .waves-input-wrapper {
 	border-radius: 0px;
 }
@@ -370,6 +371,10 @@ input:checked + .slider:before {
 .nav-city-link .btn-grey:not([disabled]):not(.disabled).active, .btn-grey:not([disabled]):not(.disabled):active, .show > .btn-grey.dropdown-toggle.cs-city-btn:active,
 .show > .btn-grey.dropdown-toggle.cs-city-btn{
     background-color: #f4f4f4 !important;
+}
+.search-menu .fa-close {
+    float: right;
+    margin-top: 4px;
 }
 @media (min-width: 1024px) and (max-width: 1365px) {
     /*.search-box .search-text-box input {
