--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -1,11 +1,14 @@
 .event-list {
 	min-height: 250px;
     margin-top: 20px;
+    background-color: #f5f5f5;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .event-list .card-size {
-	margin-bottom: 15px;
-    padding-left: 7px;
-    padding-right: 7px;
+	margin-bottom: 24px;
+    padding-left: 12px;
+    padding-right: 12px;
 }
 @media (min-width: 1024px) and (max-width: 1366px){
     .event-list .card-size {
@@ -13,12 +16,65 @@
     }
 }
 .event-list .card-size .card {
-    box-shadow: 0 1px 0px 0 rgba(0,0,0,.1), 0 1px 3px 0px rgba(0,0,0,.1) !important;
-    background-color: #f4f4f4;
+    /*box-shadow: 0 1px 0px 0 rgba(0,0,0,.1), 0 1px 3px 0px rgba(0,0,0,.1) !important;*/
+    box-shadow: none;
+    background-color: #fff;
+    border-radius: 9px !important;
 }
-.event-list #loading {
-    background: #fff url("../img/ajax-loader.gif") no-repeat scroll center center;
-    height: 190px;
+.event-list .card-size .card:hover {
+    cursor: pointer;
+}
+.event-list .card-size .card img {
+    padding: 7px;
+    border-radius: 10px !important;
+    /*min-width: 18.28rem;*/
+    min-width: 100%;
+}
+.event-list .card-size .card.entered img {
+    padding: 0 !important;
+    border-radius: 10px !important;
+    transition: transform .2s,-webkit-transform .2s;
+}
+
+.event-list .card-size .card.entered .card-title a {
+    font-weight: bold;
+}
+.event-list .card-size .card.entered p.card-text {
+    color: #212529;
+}
+.event-list .card-size .card .days-ago{
+    color: #212529;
+    font-size: 1rem !important;
+    width: auto;
+    right: 0;
+    margin: 10px;
+    position: absolute;
+    z-index: 1000;
+    padding: 0 8px;
+    display: none;
+    border-radius: 6px;
+}
+
+.event-list .card-size .card.entered .days-ago {
+    display: block;
+}
+.event-list .card-size .card.entered .category-icon {
+    display: block;
+}
+.event-list .card-size .card .category-icon {
+    position: absolute;
+    width: 42px;
+    /* left: -33px; */
+    display: none;
+    z-index: 1014;
+    border-radius: 20px;
+    padding: 4px;
+    margin: 10px 0 0 10px;
+}
+
+.event-list #loading {  
+    background: #f5f5f5 url("../img/ajax-loader.gif") no-repeat scroll center center;
+    height: 190px;  
     margin: 10% auto;
     position: relative;
     top: 50%;
@@ -45,8 +101,8 @@
     border: 1px solid #eee;
     margin-bottom: 20px;
     padding: 0px;
-    margin-left: 7px;
-    margin-right: 7px;
+    margin-left: 28px;
+    margin-right: 28px;
 }
 .event-list .filter-params .filter-clear-all {
     box-shadow: none;
@@ -163,12 +219,6 @@
 .event-list .epage-title {
     margin-bottom: 15px;
 }
-.cs_dispimg{
-    padding: 7px;
-    border-radius: 0.9rem !important;
-    /*min-width: 18.28rem;*/
-    min-width: 100%;
-}
 .view.overlay .back {
     position: absolute;
     opacity: 0.8;
@@ -186,8 +236,4 @@
 }
 .img-fluid.cs_card_icon {
     width: 35%;
-}
-.cs_event_time{
-    background: #4c4c4c;
-    color: #eeeeee;
 }
