--- a/webroot/dashboard/css/themes/all-themes.css
+++ b/webroot/dashboard/css/themes/all-themes.css
@@ -25,7 +25,7 @@
     background-color: transparent; }
 
 .theme-red .bars {
-  color: #fff; }
+  color: #474747; }
 
 .theme-red .sidebar .menu .list li.active {
   background-color: transparent; }
