--- a/webroot/newtheme/custom/css/event.details.css
+++ b/webroot/newtheme/custom/css/event.details.css
@@ -4,6 +4,7 @@
 	.cs-descr-box{
 		height: 250px; 
 		overflow-y: scroll;
+		border: 1px solid #d4d4d4;
 	}
 	.cs-title{
 		color: #4ABAC5;
@@ -61,4 +62,42 @@
 	    width: 40px;
 	    height: 40px;
 	}
+	}
+
+	.cs_banner_bg{
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-o-filter: blur(5px);
+	-ms-filter: blur(5px);
+	filter: blur(5px);
+	width: 800px;
+	height: 350px;
+	}
+	/*.banner_image{
+		position: absolute;
+	}*/
+	.cs_banner{
+		/*width: 12rem;
+		position: absolute;
+		top: 5%;
+		left: 40%;*/
+		width: 20rem;
+		position: absolute;
+		left: 0;
+		right: 0;
+		margin: auto;
+		top: -55%;
+		bottom: 0;
+		height: 15rem;
+	}
+	@media (max-width: 768px){
+		.cs_banner{
+			top: -65%;
+		}
+	}
+	.cs_details_block{
+		border: 1px solid #d4d4d4;
+	}
+	.cs_banner_container{
+		border: 1px solid #d4d4d4;
 	}
