--- a/webroot/newtheme/css/thumbnail-slider.css
+++ b/webroot/newtheme/css/thumbnail-slider.css
@@ -86,8 +86,9 @@
 
 
 #thumbnail-slider .thumb {
-    width:100%;
-    height: 100%;
+      /* background-color: #efe3e3; */
+    width: 80%;
+    /* height: 100%;*/
     background-size:contain;
     background-repeat:no-repeat;
     background-position:center center;
