--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -1,6 +1,6 @@
 .event-list {
 	min-height: 250px;
-    background-color: #f5f5f5;
+    background-color: #fff;
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -8,6 +8,7 @@
 	margin-bottom: 24px;
     padding-left: 12px;
     padding-right: 12px;
+    width: 260px;
 }
 span.no-events, span.no-more-events {
     display: block;
@@ -31,21 +32,40 @@ span.no-events, span.no-more-events {
     background-color: #fff;
     border-radius: 9px !important;
     border: 1px solid;
-    border-color: #e9ecef;
+    border-color: #f5f5f5;
+    overflow: hidden;
 }
 .event-list .card-size .card:hover {
     cursor: pointer;
 }
-.event-list .card-size .card img {
+/*.event-list .card-size .card:hover::before {
+    -webkit-animation: tapAnimation 0.25s cubic-bezier(0.31, 1, 0.34, 1) forwards;
+    animation: tapAnimation 0.25s cubic-bezier(0.31, 1, 0.34, 1) forwards;
+}*/
+.event-list .card-size .card .view .back {
+    display: none;
+}
+.event-list .card-size .card.entered .view .back {
+    position: absolute;
+    opacity: 0.8;
+    z-index: 2;
+    background: rgba(0,0,0,.2);
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 8px 8px 6px 6px;
+    cursor: pointer;
+}
+
+.event-list .card-size .card img.cs_dispimg {
     padding: 7px;
     border-radius: 10px !important;
-    /*min-width: 18.28rem;*/
     min-width: 100%;
+    transition: transform 0.6s ease, -webkit-transform 0.6s ease;
 }
-.event-list .card-size .card.entered img {
-    padding: 0 !important;
-    border-radius: 8px !important;
-    transition: transform .2s,-webkit-transform .2s;
+.event-list .card-size .card.entered img.cs_dispimg {
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 .event-list .card-size .card.entered .card-title a {
@@ -80,7 +100,7 @@ span.no-events, span.no-more-events {
 .event-list .card-size .card .days-ago {
     color: #212529;
     font-size: 1rem !important;
-    width: 74px;
+    width: 55px;
     right: 0;
     margin: 10px;
     position: absolute;
@@ -99,23 +119,23 @@ span.no-events, span.no-more-events {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
 }
 .event-list .card-size .card .days-ago ul {
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     padding-left: 0;
     list-style: none;
     text-align: center;
 }
 .event-list .card-size .card .days-ago li {
     font-size: 12px;
+    line-height: 15px;
 }
 .event-list .card-size .card .days-ago li:nth-child(1) {
-    height: 12px;
+    font-size: 11px;
 }
 .event-list .card-size .card .days-ago li:nth-child(2) {
-    font-size: 20px;
-    height: 23px;
+    font-size: 15px;
 }
 .event-list .card-size .card .days-ago li:nth-child(3) {
-    height: 14px;
+    font-size: 11px;
 }
 .event-list .card-size .card.entered .days-ago {
     display: block;
@@ -124,14 +144,14 @@ span.no-events, span.no-more-events {
     display: block;
 }
 .event-list .card-size .card.entered .category-icon img {
-    width: 24px !important;
-    min-width: 24px;
+    width: 18px !important;
+    min-width: 18px;
 }
 .event-list .card-size .card.entered .category-icon .ctxt {   
     float: right;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: bolder;
-    margin-top: 2px;
+    margin-top: 0px;
     padding-left: 3px;
 }
 .event-list .card-size .card .category-icon {
@@ -140,7 +160,7 @@ span.no-events, span.no-more-events {
     /* left: -33px; */
     display: none;
     z-index: 1014;
-    border-radius: 6px;
+    border-radius: 3px;
     padding: 2px 7px;
     margin: 10px 0 0 10px;
     
