--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -20,12 +20,7 @@ span.no-events, span.no-more-events {
     font-weight: bold;
     /* padding-bottom: 25px; */
     font-size: 18px;
-}
-@media (min-width: 1024px) and (max-width: 1366px){
-    .event-list .card-size {
-        max-width: 25%;
-    }
-}
+} 
 .event-list .card-size .card {
     /*box-shadow: 0 1px 0px 0 rgba(0,0,0,.1), 0 1px 3px 0px rgba(0,0,0,.1) !important;*/
     box-shadow: none;
@@ -182,7 +177,7 @@ span.no-events, span.no-more-events {
 }
 
 .event-list #loading {  
-    background: #f5f5f5 url("../img/ajax-loader.gif") no-repeat scroll center center;
+    background: #fff url("../img/ajax-loader.gif") no-repeat scroll center center;
     height: 190px;  
     margin: 10% auto;
     position: relative;
