--- a/webroot/newtheme/custom/css/event.list.css
+++ b/webroot/newtheme/custom/css/event.list.css
@@ -5,10 +5,13 @@
     padding-bottom: 20px;
 }
 .event-list .card-size {
-	margin-bottom: 24px;
-    padding-left: 12px;
-    padding-right: 12px;
+	margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     width: 260px;
+}
+.event-list .card-body {
+    padding: 3px 15px 15px !important;
 }
 span.no-events, span.no-more-events {
     display: block;
@@ -24,10 +27,10 @@ span.no-events, span.no-more-events {
 .event-list .card-size .card {
     /*box-shadow: 0 1px 0px 0 rgba(0,0,0,.1), 0 1px 3px 0px rgba(0,0,0,.1) !important;*/
     box-shadow: none;
-    background-color: #fff;
+    background-color: #f4f4f4;
     border-radius: 9px !important;
-    border: 1px solid;
-    border-color: #f5f5f5;
+    border: 0px solid;
+    border-color: #eceaea;
     overflow: hidden;
 }
 .event-list .card-size .card:hover {
@@ -64,7 +67,7 @@ span.no-events, span.no-more-events {
 }
 
 .event-list .card-size .card.entered .card-title a {
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 .event-list .card-size .card.entered p.card-text {
     color: #212529;
@@ -95,23 +98,25 @@ span.no-events, span.no-more-events {
 .event-list .card-size .card .days-ago {
     color: #212529;
     font-size: 1rem !important;
-    width: 55px;
+    width: 50px;
+    height: 50px;
     right: 0;
     margin: 10px;
     position: absolute;
     z-index: 1000;
-    padding: 5px;
+    padding: 2px 5px;
     display: none;
     border-radius: 0;
+    background-color: #f7f7f7;
 
-    background: rgba(255,255,255,1);
+    /*background: rgba(255,255,255,1);
     background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
     background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );*/
 }
 .event-list .card-size .card .days-ago ul {
     margin-bottom: 0px;
@@ -121,16 +126,23 @@ span.no-events, span.no-more-events {
 }
 .event-list .card-size .card .days-ago li {
     font-size: 12px;
-    line-height: 15px;
+    line-height: 16px;
 }
 .event-list .card-size .card .days-ago li:nth-child(1) {
-    font-size: 11px;
+    font-size: 12px;
+    color: #a7a7a7;
 }
 .event-list .card-size .card .days-ago li:nth-child(2) {
-    font-size: 15px;
+    font-size: 22px;
+    color: #474747;
 }
 .event-list .card-size .card .days-ago li:nth-child(3) {
-    font-size: 11px;
+    font-size: 12px;
+    color: #a7a7a7;
+    text-transform: uppercase;
+}
+.event-list .card-size .card .social-icons {
+    margin-top: 7px;
 }
 .event-list .card-size .card.entered .days-ago {
     display: block;
@@ -142,38 +154,47 @@ span.no-events, span.no-more-events {
     width: 18px !important;
     min-width: 18px;
 }
-.event-list .card-size .card.entered .category-icon .ctxt {   
+.event-list .card-size .card.entered .category-icon .ctxt {
     float: right;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: bolder;
     margin-top: 0px;
     padding-left: 3px;
+    width: 70px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    color: #474747;
 }
 .event-list .card-size .card .category-icon {
     position: absolute;
     width: auto;
+    height: 36px;
     /* left: -33px; */
     display: none;
     z-index: 1014;
     border-radius: 3px;
-    padding: 2px 7px;
+    padding: 8px 8px;
     margin: 10px 0 0 10px;
+    width: 108px;
+    overflow: hidden;
+    background-color: #f7f7f7;
     
-    background: rgba(255,255,255,1);
+    /*background: rgba(255,255,255,1);
     background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
     background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );*/
 }
 
 .event-list .card-size .card .buy-btn {
     padding: 7px 12px;
     box-shadow: none !important;
     border-radius: 0;
-    margin: 10px 0;
+    margin: 0;
 }
 
 .event-list #loading {  
@@ -215,17 +236,22 @@ span.no-events, span.no-more-events {
 }
 .event-list .card-title {
     line-height: 1 !important;
+    margin-bottom: 10px;
 }
-.event-list .card-title a, .event-list .card-title a:hover{
-    color: #212529;
-    font-size: 15px;
+.event-list .card-title a, .event-list .card-title a:hover {
+    color: #0d0d0d;
+    font-size: 14px;
+    font-weight: normal;
+    text-transform: capitalize !important;
 }
 .event-list .card-body .card-text {
-    font-size: 0.8rem !important;
+    font-size: 12px !important;
+    color: #474747;
+    margin-bottom: 6px !important;
 }
 .event-list .card-body .card-event-date {
-    width: 80%;
-    display: inline-block;
+    /*width: 80%;*/
+    display: block;
 }
 .event-list .card-body .like-button .liked-event {
     color: #f44336 !important;
